--- a/style.css
+++ b/style.css
@@ -461,8 +461,8 @@ h4 {
 }
 
 .dots__dot--active {
-  background-color: #fff;
-  /* background-color: #888; */
+  /* background-color: #fff; */
+  background-color: #888;
   opacity: 1;
 }
 
